--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,10 +16,8 @@
   </head>
 
   <body>
-    <div class="container">
-      <include src="./partials/header.html"></include>
+    <div class="page__index">
       <include src="./partials/main-index.html"></include>
-      <include src="./partials/footer.html"></include>
     </div>
     <script src="./assets/js/main.js"></script>
   </body>
