--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
           class="img-index"
         />
         <button class="button-start">
-          <a class="link" href="./game.html"><p>let´start</p></a>
+          <a class="link" href="./game.html"><p>let´s start</p></a>
         </button>
       </main>
 
