add game.html and fist styles

--- a/public/game.html
+++ b/public/game.html
@@ -16,6 +16,37 @@
   </head>
   <body>
     <div class="page__game">
+      <main>
+        <h2>Paw Paw</h2>
+        <div class="game">
+          <canvas></canvas>
+
+          <section class="game__info">
+            <div class="grid-btns">
+              <div class="btns">
+                <div class="btn-item item-up">
+                  <button class="btn-arrow">&#8593;</button>
+                </div>
+                <div class="btn-item item-left">
+                  <button class="btn-arrow">&#8592;</button>
+                </div>
+                <div class="btn-item item-down">
+                  <button class="btn-arrow">&#8595;</button>
+                </div>
+                <div class="btn-item item-right">
+                  <button class="btn-arrow">&#8594;</button>
+                </div>
+              </div>
+            </div>
+            <div class="info">
+              <h3>Life:</h3>
+              <h3>Time:</h3>
+              <h3>Record:</h3>
+            </div>
+          </section>
+        </div>
+      </main>
+
       
 
     </div>
