--- a/src/html/game.html
+++ b/src/html/game.html
@@ -16,7 +16,8 @@
   </head>
   <body>
     <div class="page__game">
-      <include src="./partials/header.html"></include>
+      <include src="./partials/main.html"></include>
+      <include src="./partials/footer.html"></include>
     </div>
     <script src="./assets/js/game.js"></script>
     <script src="./assets/js/main.js"></script>
