add footer styles

--- a/public/game.html
+++ b/public/game.html
@@ -55,7 +55,14 @@
         </div>
       </main>
 
-      
+      <footer class="footer">
+        <p class="footer__text">
+          &copy <span class="logo">paw paw</span> coded by
+          <a class="link-footer" href="https://github.com/lupeMorales" target="_blank"
+            >lupeMorales</a
+          >
+        </p>
+      </footer>
 
     </div>
     <script src="./assets/js/game.js"></script>
