--- a/public/game.html
+++ b/public/game.html
@@ -20,7 +20,7 @@
         <h2 class="title__game">Paw Paw</h2>
         <div class="game">
           <section>
-            <canvas></canvas>
+            <canvas class="js-canvas"></canvas>
             <div class="grid-btns">
               <div class="btns">
                 <div class="btn-item item-up">
@@ -65,6 +65,7 @@
       </footer>
 
     </div>
+    <script src="./assets/js/maps.js"></script>
     <script src="./assets/js/game.js"></script>
     <script src="./assets/js/main.js"></script>
   </body>
