--- a/src/html/game.html
+++ b/src/html/game.html
@@ -19,6 +19,7 @@
       <include src="./partials/main.html"></include>
       <include src="./partials/footer.html"></include>
     </div>
+    <script src="./assets/js/maps.js"></script>
     <script src="./assets/js/game.js"></script>
     <script src="./assets/js/main.js"></script>
   </body>
