update winGame function.Add confetti

--- a/public/game.html
+++ b/public/game.html
@@ -65,6 +65,8 @@
       </footer>
 
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+
     <script src="./assets/js/maps.js"></script>
     <script src="./assets/js/game.js"></script>
     <script src="./assets/js/main.js"></script>
