--- a/src/html/game.html
+++ b/src/html/game.html
@@ -19,6 +19,8 @@
       <include src="./partials/main.html"></include>
       <include src="./partials/footer.html"></include>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+
     <script src="./assets/js/maps.js"></script>
     <script src="./assets/js/game.js"></script>
     <script src="./assets/js/main.js"></script>
