update reset messages

--- a/public/game.html
+++ b/public/game.html
@@ -47,7 +47,7 @@
               class="img-game"
             /> -->
             <ul class="info">
-              <li class="subtitle">Life: ❤️❤️❤️</li>
+              <li class="subtitle">Life: <span class="js-life"></span></li>
               <li class="subtitle">Time ⏰: 255555</li>
               <li class="subtitle">Record 🏁:22225</li>
             </ul>
