save record in localStorage

--- a/public/game.html
+++ b/public/game.html
@@ -57,7 +57,7 @@
         <!-- The Modal -->
         <div class="modal js-modal">
           <!-- Modal content -->
-          <div class="modal-content">
+          <div class="modal-content js-nodal-content">
             <!--  <span class="close js-btn-close">&times;</span> -->
             <div class="modal-content__text">
               <p class="doggy">🐶🐶🐶🐶🐶</p>
