show modal win, exit and block screen

--- a/public/game.html
+++ b/public/game.html
@@ -54,7 +54,7 @@
           </section>
         </div>
 
-        <!-- The Modal -->
+        <!-- The Modal game over -->
         <div class="modal js-modal">
           <!-- Modal content -->
           <div class="modal-content js-nodal-content">
@@ -71,6 +71,27 @@
             <button class="button-option js-btn-no">no</button>
           </div>
         </div>
+
+        <!-- The Modal win -->
+        <div class="modal js-modal-winner">
+          <!-- Modal content -->
+          <div class="modal-content js-nodal-content">
+            <!--  <span class="close js-btn-close">&times;</span> -->
+            <div class="modal-content__text">
+              <p class="doggy">🦴🦴🦴🦴🦴</p>
+              <h3>You are great!!</h3>
+              <p>play again?</p>
+            </div>
+
+            <button class="button-option js-btn-yes">
+              <a class="link-to-index" href="./index.html">yes</a>
+            </button>
+            <button class="button-option js-no">no</button>
+          </div>
+        </div>
+
+        <!-- The Modal to bock screen-->
+        <div class="modal js-modal-block"></div>
       </main>
 
       <footer class="footer">
